Changed RE files and Main to get a list of REData objects of the renewables of 3 days ago.